objects/FINS_Document_Value__c.object
<CustomObject>
    <description>IDO: Object to store Client&apos;s documents</description>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Document Vault</relationshipLabel>
        <relationshipName>Document_Vault</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Doc_Type__c</fullName>
        <label>Doc Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <label>Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Document Vault</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Call_Scripts</fullName>
        <columns>NAME</columns>
        <columns>Template__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Doc_Type__c</field>
            <operation>contains</operation>
            <value>Call Scripts</value>
        </filters>
        <label>Call Scripts</label>
    </listViews>
    <listViews>
        <fullName>Pitch_Prep</fullName>
        <columns>NAME</columns>
        <columns>Template__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Doc_Type__c</field>
            <operation>contains</operation>
            <value>Pitch Prep</value>
        </filters>
        <label>Pitch Prep</label>
    </listViews>
    <listViews>
        <fullName>Required_Client_Docs</fullName>
        <columns>NAME</columns>
        <columns>Last_Update__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Doc_Type__c</field>
            <operation>contains</operation>
            <value>Client Doc</value>
        </filters>
        <label>Client Documents</label>
    </listViews>
    <nameField>
        <label>Document Vault</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Vault</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>